@@ -1,5 +1,10 @@
 2013-08-21 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c:
+	  Be a little bit more flexible about addition operands - necessary to make Coremark compile.
+
+2013-08-21 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/stm8/peep.c,
 	  src/stm8/peeph.def:
 	  Eliminate dead popw / pushw pairs.
